// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Register /> should render Register component 1`] = `
<div
  class="sc-qZruQ cGBNni"
>
  <div
    class="row"
  >
    <div
      class="sc-eDLKEg cudEYk"
    >
      Register
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="sc-gLLuHO cgMQib"
    >
      Register with email/password:
    </div>
  </div>
  <form
    autocomplete="off"
  >
    <div
      class="row"
    >
      <div
        class="sc-hLQTFJ gXUmTP"
        varaint="normal"
      >
        <div
          class="input-container"
        >
          <input
            data-testid="email-input"
            id="email-input"
            name="email"
            placeholder="Enter user email..."
          />
          <label
            class=""
            for="email-input"
          >
            User Email
          </label>
        </div>
      </div>
      <span
        class="tooltip"
      />
    </div>
    <div
      class="row"
    >
      <div
        class="sc-hLQTFJ gXUmTP"
        varaint="normal"
      >
        <div
          class="input-container"
        >
          <input
            data-testid="spotify-email-input"
            id="spotify-email-input"
            name="spotifyEmail"
            placeholder="Enter Spotify email..."
          />
          <label
            class=""
            for="spotify-email-input"
          >
            Spotify Email
          </label>
        </div>
      </div>
      <span
        class="tooltip"
      >
        <svg
          data-tooltip-id="spotify-email-tooltip"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.5 1a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zm0 12a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm1.55-8.42a1.84 1.84 0 0 0-.61-.42A2.25 2.25 0 0 0 7.53 4a2.16 2.16 0 0 0-.88.17c-.239.1-.45.254-.62.45a1.89 1.89 0 0 0-.38.62 3 3 0 0 0-.15.72h1.23a.84.84 0 0 1 .506-.741.72.72 0 0 1 .304-.049.86.86 0 0 1 .27 0 .64.64 0 0 1 .22.14.6.6 0 0 1 .16.22.73.73 0 0 1 .06.3c0 .173-.037.343-.11.5a2.4 2.4 0 0 1-.27.46l-.35.42c-.12.13-.24.27-.35.41a2.33 2.33 0 0 0-.27.45 1.18 1.18 0 0 0-.1.5v.66H8v-.49a.94.94 0 0 1 .11-.42 3.09 3.09 0 0 1 .28-.41l.36-.44a4.29 4.29 0 0 0 .36-.48 2.59 2.59 0 0 0 .28-.55 1.91 1.91 0 0 0 .11-.64 2.18 2.18 0 0 0-.1-.67 1.52 1.52 0 0 0-.35-.55zM6.8 9.83h1.17V11H6.8V9.83z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="row"
    >
      <div
        class="sc-hLQTFJ gXUmTP"
        varaint="normal"
      >
        <div
          class="input-container"
        >
          <input
            data-testid="password-input"
            id="password-input"
            name="password"
            placeholder="Enter password..."
            type="password"
          />
          <label
            class=""
            for="password-input"
          >
            Password
          </label>
        </div>
      </div>
      <span
        class="tooltip"
      />
    </div>
    <div
      class="row"
    >
      <div
        class="sc-hLQTFJ gXUmTP"
        varaint="normal"
      >
        <div
          class="input-container"
        >
          <input
            data-testid="password-confirm-input"
            id="password-confirm-input"
            name="passwordConfirm"
            placeholder="Confirm password..."
            type="password"
          />
          <label
            class=""
            for="password-confirm-input"
          >
            Confirm Password
          </label>
        </div>
      </div>
      <span
        class="tooltip"
      />
    </div>
    <div
      class="row"
    >
      <button
        class="sc-beyTiQ sc-guDMob bbjLuS bDhOyw"
        data-testid="register-button"
        id="register-button"
      >
        Register
      </button>
    </div>
  </form>
</div>
`;

exports[`<Register /> should render Register component with disabled elements 1`] = `
<div
  class="sc-qZruQ cGBNni"
>
  <div
    class="row"
  >
    <div
      class="sc-eDLKEg cudEYk"
    >
      Register
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="sc-gLLuHO cgMQib"
    >
      Register with email/password:
    </div>
  </div>
  <form
    autocomplete="off"
  >
    <div
      class="row"
    >
      <div
        class="sc-hLQTFJ fhcrtD"
        disabled=""
        varaint="normal"
      >
        <div
          class="input-container"
        >
          <input
            data-testid="email-input"
            disabled=""
            id="email-input"
            name="email"
            placeholder="Enter user email..."
          />
          <label
            class=""
            for="email-input"
          >
            User Email
          </label>
        </div>
      </div>
      <span
        class="tooltip"
      />
    </div>
    <div
      class="row"
    >
      <div
        class="sc-hLQTFJ fhcrtD"
        disabled=""
        varaint="normal"
      >
        <div
          class="input-container"
        >
          <input
            data-testid="spotify-email-input"
            disabled=""
            id="spotify-email-input"
            name="spotifyEmail"
            placeholder="Enter Spotify email..."
          />
          <label
            class=""
            for="spotify-email-input"
          >
            Spotify Email
          </label>
        </div>
      </div>
      <span
        class="tooltip"
      >
        <svg
          data-tooltip-id="spotify-email-tooltip"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.5 1a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zm0 12a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm1.55-8.42a1.84 1.84 0 0 0-.61-.42A2.25 2.25 0 0 0 7.53 4a2.16 2.16 0 0 0-.88.17c-.239.1-.45.254-.62.45a1.89 1.89 0 0 0-.38.62 3 3 0 0 0-.15.72h1.23a.84.84 0 0 1 .506-.741.72.72 0 0 1 .304-.049.86.86 0 0 1 .27 0 .64.64 0 0 1 .22.14.6.6 0 0 1 .16.22.73.73 0 0 1 .06.3c0 .173-.037.343-.11.5a2.4 2.4 0 0 1-.27.46l-.35.42c-.12.13-.24.27-.35.41a2.33 2.33 0 0 0-.27.45 1.18 1.18 0 0 0-.1.5v.66H8v-.49a.94.94 0 0 1 .11-.42 3.09 3.09 0 0 1 .28-.41l.36-.44a4.29 4.29 0 0 0 .36-.48 2.59 2.59 0 0 0 .28-.55 1.91 1.91 0 0 0 .11-.64 2.18 2.18 0 0 0-.1-.67 1.52 1.52 0 0 0-.35-.55zM6.8 9.83h1.17V11H6.8V9.83z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="row"
    >
      <div
        class="sc-hLQTFJ fhcrtD"
        disabled=""
        varaint="normal"
      >
        <div
          class="input-container"
        >
          <input
            data-testid="password-input"
            disabled=""
            id="password-input"
            name="password"
            placeholder="Enter password..."
            type="password"
          />
          <label
            class=""
            for="password-input"
          >
            Password
          </label>
        </div>
      </div>
      <span
        class="tooltip"
      />
    </div>
    <div
      class="row"
    >
      <div
        class="sc-hLQTFJ fhcrtD"
        disabled=""
        varaint="normal"
      >
        <div
          class="input-container"
        >
          <input
            data-testid="password-confirm-input"
            disabled=""
            id="password-confirm-input"
            name="passwordConfirm"
            placeholder="Confirm password..."
            type="password"
          />
          <label
            class=""
            for="password-confirm-input"
          >
            Confirm Password
          </label>
        </div>
      </div>
      <span
        class="tooltip"
      />
    </div>
    <div
      class="row"
    >
      <button
        class="sc-beyTiQ sc-guDMob bbjLuS bDhOyw"
        data-testid="register-button"
        disabled=""
        id="register-button"
      >
        Register
      </button>
    </div>
  </form>
</div>
`;

exports[`<Register /> should render Register component with error 1`] = `
<div
  class="sc-qZruQ cGBNni"
>
  <div
    class="row"
  >
    <div
      class="sc-eDLKEg cudEYk"
    >
      Register
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="sc-gLLuHO cgMQib"
    >
      Register with email/password:
    </div>
  </div>
  <form
    autocomplete="off"
  >
    <div
      class="row"
    >
      <div
        class="sc-hLQTFJ gXUmTP"
        varaint="normal"
      >
        <div
          class="input-container"
        >
          <input
            data-testid="email-input"
            id="email-input"
            name="email"
            placeholder="Enter user email..."
          />
          <label
            class=""
            for="email-input"
          >
            User Email
          </label>
        </div>
      </div>
      <span
        class="tooltip"
      />
    </div>
    <div
      class="row"
    >
      <div
        class="sc-hLQTFJ gXUmTP"
        varaint="normal"
      >
        <div
          class="input-container"
        >
          <input
            data-testid="spotify-email-input"
            id="spotify-email-input"
            name="spotifyEmail"
            placeholder="Enter Spotify email..."
          />
          <label
            class=""
            for="spotify-email-input"
          >
            Spotify Email
          </label>
        </div>
      </div>
      <span
        class="tooltip"
      >
        <svg
          data-tooltip-id="spotify-email-tooltip"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.5 1a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zm0 12a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm1.55-8.42a1.84 1.84 0 0 0-.61-.42A2.25 2.25 0 0 0 7.53 4a2.16 2.16 0 0 0-.88.17c-.239.1-.45.254-.62.45a1.89 1.89 0 0 0-.38.62 3 3 0 0 0-.15.72h1.23a.84.84 0 0 1 .506-.741.72.72 0 0 1 .304-.049.86.86 0 0 1 .27 0 .64.64 0 0 1 .22.14.6.6 0 0 1 .16.22.73.73 0 0 1 .06.3c0 .173-.037.343-.11.5a2.4 2.4 0 0 1-.27.46l-.35.42c-.12.13-.24.27-.35.41a2.33 2.33 0 0 0-.27.45 1.18 1.18 0 0 0-.1.5v.66H8v-.49a.94.94 0 0 1 .11-.42 3.09 3.09 0 0 1 .28-.41l.36-.44a4.29 4.29 0 0 0 .36-.48 2.59 2.59 0 0 0 .28-.55 1.91 1.91 0 0 0 .11-.64 2.18 2.18 0 0 0-.1-.67 1.52 1.52 0 0 0-.35-.55zM6.8 9.83h1.17V11H6.8V9.83z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="row"
    >
      <div
        class="sc-hLQTFJ gXUmTP"
        varaint="normal"
      >
        <div
          class="input-container"
        >
          <input
            data-testid="password-input"
            id="password-input"
            name="password"
            placeholder="Enter password..."
            type="password"
          />
          <label
            class=""
            for="password-input"
          >
            Password
          </label>
        </div>
      </div>
      <span
        class="tooltip"
      />
    </div>
    <div
      class="row"
    >
      <div
        class="sc-hLQTFJ gXUmTP"
        varaint="normal"
      >
        <div
          class="input-container"
        >
          <input
            data-testid="password-confirm-input"
            id="password-confirm-input"
            name="passwordConfirm"
            placeholder="Confirm password..."
            type="password"
          />
          <label
            class=""
            for="password-confirm-input"
          >
            Confirm Password
          </label>
        </div>
      </div>
      <span
        class="tooltip"
      />
    </div>
    <div
      class="row error"
      data-testid="submit-error"
      id="submit-error"
    >
      <div
        class="sc-iBdoyZ chkbom"
      >
        Test Error
      </div>
    </div>
    <div
      class="row"
    >
      <button
        class="sc-beyTiQ sc-guDMob bbjLuS bDhOyw"
        data-testid="register-button"
        id="register-button"
      >
        Register
      </button>
    </div>
  </form>
</div>
`;
